<resources>
    <string name="app_name">KetNote</string>
    <string name="firstimage">firstimage</string>
    <string name="bienvenido_a_ketnote">¡Welcome to KetNote!</string>
    <string name="first_onboarding_subtitle">Here you can save your day-to-day notes and consult them anywhere.</string>
    <string name="notas_con_imagenes">Give life to your note with an image!</string>
    <string name="second_onboarding_subtitle">Enrich your notes by using an image that best represents the situation.</string>
    <string name="inicia_sesion_para_continuar">Log in to continue.</string>
    <string name="third_onboarding_subtitle">Use your Google account to access and enjoy your best moments.</string>
    <string name="welcome_back">¡Welcome!</string>
    <string name="please_sign_in">Please login in to continue…</string>
    <string name="inicia_sesion_con_google">Sign in with Google</string>
    <string name="welcome_to_home_screen">Welcome to HOME screen!</string>
    <string name="onBoardingTextButton">Next</string>
    <string name="options_subheader_title">Options</string>
    <string name="signout_title">SignOut</string>
    <string name="delete_title">Delete all notes</string>
    <string name="page_title">KetNote</string>
    <string name="search">Search</string>
    <string name="title">Write Title for Note…</string>
    <string name="text">Write Note Description…</string>
    <string name="submit_note">Upload Note</string>
    <string name="app_title">My First Note</string>
    <string name="app_date">october 6 2023</string>
    <string name="app_text_content">Show a dialog\n\nWhen you want to show your dialog, create an instance of your DialogFragment and call show(), passing the FragmentManager and a tag name for the dialog fragment.\n\nYou can get the FragmentManager by calling getSupportFragmentManager() from the FragmentActivity or by calling getParentFragmentManager() from a Fragment. See the following for an example:</string>
    <string name="delete_note">Delete Note</string>
    <string name="searchbar_hint">Search Notes…</string>
    <string name="action_text">OK</string>
    <string name="notas">Create Note</string>
    <string name="about_title">About</string>
    <string name="add_image">Add Image</string>
    <string name="add_image_new">Image</string>
    <string name="update">Update</string>
    <string name="update_note">Update Note</string>
    <string name="create_note">Create Note</string>
    <string name="image_visor">image_visor</string>
    <string name="siguiente">Next</string>
    <string name="comenzar">Let\'s Go!</string>
    <string name="content_description_more">Delete Note</string>
    <string name="more">Delete Note</string>
    <string name="content_description_delete_image">Delete Image</string>
    <string name="more_delete_image">Delete Image</string>
    <string name="msg_token_fmt">quantum</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="ok">OK</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="delete_all_notes">Are you sure to delete all your notes?</string>
    <string name="all_notes_will_be_deleted">All notes will be deleted!</string>
    <string name="cancel">Cancel</string>
    <string name="delete_notes">Delete notes</string>
    <string name="app_version_text">KetNote is an ComplexSoftSolutions © product.\ncurrent version is : %1$s</string>
    <string name="close_sesion">Are you sure to log out?</string>
    <string name="save_your_work">Save your work before continuing!</string>
    <string name="logout">Sign Out</string>
    <string name="no_internet_signal">No internet connection!</string>
    <string name="losing_internet_signal">You are losing internet connection!</string>
    <string name="loading_notes">Synchronizing notes…</string>
    <string name="no_notes_for_display">There are no notes to show</string>
    <string name="must_insert_title">You have to add a title to the note!</string>
    <string name="get_connection">Connect to the internet to continue working!</string>
    <string name="signal_restored">Signal Restored!</string>
    <string name="you_lost_signal">You Lost Signal!</string>
    <string name="image_preview">Vista Previa</string>
    <string name="home_greeting">Hi Angel! stay productive today.</string>
    <string name="home_last_notes">Latests Notes</string>
    <string name="settings_title">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="home_pinned_notes">Pinned Notes</string>
    <string name="home_active_task">Active Tasks</string>
    <string name="home_active_reminders">Active Reminders</string>
    <string name="note_tab">Note</string>
    <string name="task_tab">Task</string>
    <string name="story_tab">Story</string>
    <string name="create_layout_page">Create Note</string>
    <string name="see_more">See All</string>
    <string name="accelerator" translatable="false">accelerator</string>
    <string name="content_description_accelerator" translatable="false">accelerator</string>
    <string name="rotation" translatable="false">rotation</string>
    <string name="content_description_rotation" translatable="false">rotatiojn</string>
    <string name="dashboard" translatable="false">dashboard</string>
    <string name="content_description_dashboard" translatable="false">dashboard</string>
    <string name="voice_control">Voice Control</string>
    <string name="image_control">Add Image</string>
    <string name="gemini_control">Gemini</string>
    <string name="edit_screen_title">Edit Note</string>
    <string name="home_stories">Stories</string>
    <string name="home_last_stories">Lastest Stories</string>
    <string name="notifications_clear_all">Clear All</string>
    <string name="share_instagram">Share To Instagram</string>
    <string name="story_title">Write a title for your story.</string>
</resources>