<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_item"
        android:title="@string/options_subheader_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/delete_all_item"
                    android:checkable="true"
                    android:icon="@drawable/baseline_delete_24"
                    android:title="@string/delete_title" />
                <item
                    android:id="@+id/signout_item"
                    android:checkable="true"
                    android:icon="@drawable/google"
                    android:title="@string/signout_title" />
            </group>
        </menu>
    </item>


</menu>