<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_constraint">

    <include
        android:id="@+id/login_connectivity_layout"
        layout="@layout/connectivity_observer_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_marginTop="50dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_title"
            android:layout_marginTop="130dp"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_back" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_subtitle"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_marginTop="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/please_sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_marginTop="120dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:text="@string/inicia_sesion_con_google"
            android:textAllCaps="false"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:strokeWidth="0.1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>