<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/edit_screen_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/edit_delete_note"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/edit_screen_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_screen_title"
                    style="@style/TextAppearance.Material3.HeadlineLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences|text|textMultiLine|textAutoCorrect|textAutoComplete"
                    android:text="@string/app_title"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/edit_screen_date"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:padding="6dp"
                android:text="@string/app_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_screen_text"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences|text|textMultiLine|textAutoCorrect|textAutoComplete"
                    android:text="@string/app_text_content"
                    android:textIsSelectable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="36dp">

                <ImageView
                    android:id="@+id/edit_screen_image"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    android:src="@drawable/first" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/edit_screen_bottom_appbar"
        style="@style/Widget.Material3.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"
        app:menu="@menu/edit_layout_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_screen_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:layout_anchor="@id/edit_screen_bottom_appbar"
        app:srcCompat="@drawable/baseline_done_all_24" />

    <include
        android:id="@+id/edit_screen_connectivity_layout"
        layout="@layout/connectivity_observer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>